--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
-<!DOCTYPE <!DOCTYPE html>
+<!doctype html>
 <html>
-
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Crystal Game Collector</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
-
+<meta charset="UTF-8">
+<title>Main Page</title>
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+<div class="content1">
+  <h1>International Bites</h1>
+</div>
+<div class="content">
+  <ul>
+    <li><a>Tour Cuisine</a>
+      <ul>
+        <li><a>India</a></li>
+        <li><a>China</a></li>
+        <li><a>France</a></li>
+        <li><a>Spain</a></li>
+        <li><a>Germany</a></li>
+      </ul>
+    </li>
+  </ul>
+</div>
+<video height="400" width="900" autoplay="autoplay"  preload loop>
+  <source src="Pexels.mp4" type="video/mp4" />
+</video>
+	<footer>
+		<img src ="cooking.png"
+			 class="medium" alt="cooking"/>
+  </footer>
+  
+  <script href="jss.jss"></script>
 </body>
-
 </html>
