--- a/Project1page2.html
+++ b/Project1page2.html
@@ -1,16 +1,140 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Project1page2</title>
-<link href="bootcamp/Homework/Project1/style.css" rel="stylesheet" type="text/css">
+    <meta charset="UTF-8">
+    <title>Project1page2</title>
+    <link href="style2.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
 
 
 <body>
 
-	<h1>Recipes</h1>
-	
-	
-	</body>
+    <video autoplay="autoplay" loop controls height="400" width="900" class="video">
+        <source src="VideoSamp.mp4" type="video/mp4" />
+    </video>;
+
+    <div class="container bg-transparent">
+        <div class="row">
+            <div class="col-sm">
+                <div class="card bg-transparent" style="width: 18rem;" id ="recipe1">
+                    <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+                    <div class="card-body bg-transparent">
+                        <h5 class="card-title">Recipe 1</h5>
+                        <p class="card-text">Description&nbsp;of Dish</p>
+                        <a href="#" class="btn btn-secondary">Select Dish</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card bg-transparent" style="width: 18rem;" id = "recipe2">
+                    <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+                    <div class="card-body bg-transparent">
+                        <h5 class="card-title">Recipe 2</h5>
+                        <p class="card-text">Description of Dish</p>
+                        <a href="#" class="btn btn-secondary">Select Dish</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card bg-transparent" style="width: 18rem;" id = "recipe3">
+                    <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+                    <div class="card-body ">
+                        <h5 class="card-title">Recipe 3</h5>
+                        <p class="card-text">Description of Dish</p>
+                        <a href="#" class="btn btn-secondary">Select Dish</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="card bg-transparent" style="width: 18rem" id ="recipe4">
+                    <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+                    <div class="card-body bg-transparent">
+                        <h5 class="card-title">Recipe 4</h5>
+                        <p class="card-text">Description of Dish</p>
+                        <a href="#" class="btn btn-secondary">Select Dish</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card bg-transparent" style="width: 18rem;" id = "recipe5">
+                    <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+                    <div class="card-body 
+                        <h5 class="card-title">Recipe 5</h5>
+                        <p class="card-text">Description of Dish</p>
+                        <a href="#" class="btn btn-secondary">Select Dish</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card bg-transparent" style="width: 18rem;" id = "recipe6">
+                    <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+                    <div class="card-body bg-transparent">
+                        <h5 class="card-title">Recipe 6</h5>
+                        <p class="card-text">Description of Dish</p>
+                        <a href="#" class="btn btn-secondary">Select Dish</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="card bg-transparent" style="width: 18rem;" id = "recipe7">
+                    <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+                    <div class="card-body bg-transparent">
+                        <h5 class="card-title">Recipe 7</h5> 
+                        <p class="card-text">Description of Dish</p>
+                        <a href="#" class="btn btn-secondary">Select Dish</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card bg-transparent" style="width: 18rem;" id = "recipe8">
+                    <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+                    <div class="card-body bg-transparent">
+                        <h5 class="card-title">Recipe 8</h5>
+                        <p class="card-text">Description of Dish</p>
+                        <a href="#" class="btn btn-secondary">Select Dish</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm">
+                <div class="card bg-transparent" style="width: 18rem;" id = "recipe9">
+                    <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+                    <div class="card-body bg-transparent">
+                        <h5 class="card-title">Recipe 9</h5>
+                        <p class="card-text">Description&nbsp;of Dish</p>
+                        <a href="#" class="btn btn-secondary">Select Dish</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+<div class="container">
+<div class="row">
+    <div class="col">
+        <div class="card bg-transparent" style="width: 18rem;" id="recipe10">
+            <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+            <div class="card-body bg-transparent">
+                <h5 class="card-title">Recipe 10</h5>
+                <p class="card-text">Description of Dish</p>
+                <a href="#" class="btn btn-secondary">Select Dish</a>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+
 </html>
