Video Edit Test

--- a/Project1page2.html
+++ b/Project1page2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Project1page2</title>
-<link href="bootcamp/Homework/Project1/style.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 
@@ -12,5 +12,6 @@
 	<h1>Recipes</h1>
 	
 	
-	</body>
+	<script href="jss.jss"></script>
+</body>
 </html>
