--- a/Main Page1.html
+++ b/Main Page1.html
@@ -3,31 +3,40 @@
 <head>
 <meta charset="UTF-8">
 <title>Main Page</title>
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="./style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'> 
+
 </head>
 <body>
 <div class="content1">
-  <h1>International Bites</h1>
+    <p>International Bites</p>    
 </div>
+	
 <div class="content">
   <ul>
-    <li><a>Tour Cuisine</a>
+    <li><a id ="Selection">Go on a Cuisine Adventure</a>
       <ul>
-        <li><a>India</a></li>
-        <li><a>China</a></li>
-        <li><a>France</a></li>
-        <li><a>Spain</a></li>
-        <li><a>Germany</a></li>
+        <li><a id ="india">India</a></li>
+        <li><a id ="china">China</a></li>
+        <li><a id ="France">France</a></li>
+        <li><a id ="spain">Spain</a></li>
+        <li><a id ="Germany">Germany</a></li>
       </ul>
     </li>
   </ul>
 </div>
 <video height="400" width="900" autoplay="autoplay"  preload loop>
-  <source src="Pexels.mp4" type="video/mp4" />
+  <source src="./Pexels.mp4" type="video/mp4" />
 </video>
 	<footer>
-		<img src ="cooking.png"
+		<div class ="content3">
+		<img src ="./cooking.png"
 			 class="medium" alt="cooking"/>
+		<img src ="./cooking2.png"
+			 class="medium" alt="cooking"/>
+		</div>
 	</footer>
 </body>
 </html>
