updated some JS and HTML

--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
     </li>
   </ul>
 </div>
-<iframe src="https://github.com/anars/blank-audio/blob/master/250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
-<video height="400" width="900" autoplay="autoplay"  preload loop>
+<!-- <iframe src="https://github.com/anars/blank-audio/blob/master/250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe> -->
+<video autoplay="autoplay" loop controls height="400" width="900" class="video">
   <source src="Pexels.mp4" type="video/mp4" />
-</video>
+</video>;
 	<footer>
 		<img src ="cooking.png"
 			 class="medium" alt="cooking"/>
   </footer>
   
-  <script href="jss.jss"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="jss.js"></script>
 </body>
 </html>
