--- a/Project1page2.html
+++ b/Project1page2.html
@@ -12,11 +12,11 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 
 <body>
 
-    <video autoplay="autoplay" loop controls height="400" width="900" class="video">
+    <!-- <video autoplay="autoplay" loop controls height="400" width="900" class="video">
         <source src="VideoSamp.mp4" type="video/mp4" />
-    </video>;
+    </video>; -->
 
-    <div class="container bg-transparent">
+    <div class="container bg-transparent" id=container>
         <div class="row">
             <div class="col-sm">
                 <div class="card bg-transparent" style="width: 18rem;" id ="recipe1">
@@ -48,10 +48,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
     <br>
-    <div class="container">
         <div class="row">
             <div class="col-sm">
                 <div class="card bg-transparent" style="width: 18rem" id ="recipe4">
@@ -66,7 +63,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
             <div class="col-sm">
                 <div class="card bg-transparent" style="width: 18rem;" id = "recipe5">
                     <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
-                    <div class="card-body 
+                    <div class="card-body bg-transparent">
                         <h5 class="card-title">Recipe 5</h5>
                         <p class="card-text">Description of Dish</p>
                         <a href="#" class="btn btn-secondary">Select Dish</a>
@@ -86,7 +83,6 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
         </div>
     </div>
     <br>
-    <div class="container">
         <div class="row">
             <div class="col-sm">
                 <div class="card bg-transparent" style="width: 18rem;" id = "recipe7">
@@ -121,21 +117,21 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
         </div>
     </div>
     <br>
-<div class="container">
-<div class="row">
-    <div class="col">
-        <div class="card bg-transparent" style="width: 18rem;" id="recipe10">
-            <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
-            <div class="card-body bg-transparent">
-                <h5 class="card-title">Recipe 10</h5>
-                <p class="card-text">Description of Dish</p>
-                <a href="#" class="btn btn-secondary">Select Dish</a>
+    <div class="row">
+        <div class="col">
+            <div class="card bg-transparent" style="width: 18rem;" id="recipe10">
+                <img src="http://via.placeholder.com/640x360" class="card-img-top" alt="...">
+                <div class="card-body bg-transparent">
+                    <h5 class="card-title">Recipe 10</h5>
+                    <p class="card-text">Description of Dish</p>
+                    <a href="#" class="btn btn-secondary">Select Dish</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="jss.js"></script>
 </body>
-	
-	
-	<script href="jss.jss"></script>
 </html>
