connected firstpageto2ndpage

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   <ul>
     <li><a id ="Selection">Go on a Cuisine Adventure</a>
       <ul>
-        <li><a id ="india">India</a></li>
-        <li><a id ="china">China</a></li>
-        <li><a id ="France">France</a></li>
-        <li><a id ="spain">Spain</a></li>
-        <li><a id ="Germany">Germany</a></li>
+        <li><a class="country" data="indian">India</a></li>
+        <li><a class="country" data="chinese">China</a></li>
+        <li><a class="country" data="french">France</a></li>
+        <li><a class="country" data="spanish">Spain</a></li>
+        <li><a class="country" data="german">Germany</a></li>
       </ul>
     </li>
   </ul>
@@ -37,6 +37,9 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 		<img src ="./cooking2.png"
 			 class="medium" alt="cooking"/>
 		</div>
-	</footer>
+  </footer>
+  
+ <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+ <script src="jss.js"></script>
 </body>
 </html>
