--- a/Project1page2.html
+++ b/Project1page2.html
@@ -14,10 +14,10 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 
 
 <body>
-
-    <video autoplay="autoplay" loop controls height="400" width="900" class="video">
-        <source src="VideoSamp.mp4" type="video/mp4" />
-    </video>;
+	<div class= "backimage">
+	<img src ="https://i.pinimg.com/originals/b8/dd/fb/b8ddfbb198825156089392b60b25b1ab.jpg">
+	</div>
+  
 
     <div class="container bg-transparent" id=container>
 
