--- a/Project1page2.html
+++ b/Project1page2.html
@@ -15,9 +15,9 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 
 <body>
 
-    <video autoplay="autoplay" loop controls height="400" width="900" class="video">
+    <!-- <video autoplay="autoplay" loop controls height="400" width="900" class="video">
         <source src="VideoSamp.mp4" type="video/mp4" />
-    </video>
+    </video> -->
   
 	<div class= "backimage">
 	<img src ="https://i.pinimg.com/originals/b8/dd/fb/b8ddfbb198825156089392b60b25b1ab.jpg">
@@ -35,13 +35,14 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
            <br>
 		   </form>
 		   
-  </script>
-  <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
-    onreadystatechange="if (this.readyState === 'complete') this.onload()">
+  <!-- <script async defer src="https://apis.google.com/js/api.js" onload="this.onload=function(){};handleClientLoad()"
+    onreadystatechange="if (this.readyState === 'complete') this.onload()"> -->
     </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="jss.js"></script>
        </div>
+
+       
 
 
 	</body>
