--- a/Page3-1.html
+++ b/Page3-1.html
@@ -4,11 +4,25 @@
 <meta charset="UTF-8">
 <title>Untitled Document</title>
 <link href="style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'> 
 	
 </head>
+
+
 	<div class ="page3bg">
 	<img src = "https://i.pinimg.com/originals/16/88/cc/1688cc152cf7a55cb6c070b0bad4ace9.jpg">
 	</div>
+
+
+
+	<button id="authorize_button">Authorize</button>
+	<button id="signout_button" style="display: none;">Sign Out</button>
+	<button id="event_button">event</button>
+	
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="jss.js"></script>
 	
 	
 <body>
