--- a/Page3-1.html
+++ b/Page3-1.html
@@ -10,21 +10,31 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 	
 </head>
 
-
+<body>
 	<div class ="page3bg">
 	<img src = "https://i.pinimg.com/originals/16/88/cc/1688cc152cf7a55cb6c070b0bad4ace9.jpg">
 	</div>
 
-
-
-	<button id="authorize_button">Authorize</button>
+	
+	
+<div class = "buttoncontainer" align="center">
+	
+	<h1>Invite Your Friends!</h1>
+	<button id="authorize_button" class ="btn btn-light btn-lg">Sign In </button>
 	<button id="signout_button" style="display: none;">Sign Out</button>
-	<button id="event_button">event</button>
+	<button id="event_button" class ="btn btn-light btn-lg">Sign Out</button>
+	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+</div>	
 	
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="jss.js"></script>
+
+
+
+
+
 	
 	
-<body>
+
 </body>
 </html>
