--- a/Main Page1.html
+++ b/Main Page1.html
@@ -2,41 +2,37 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Main Page</title>
 <link href="./style.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'> 
-
+<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 <body>
+
+
 <div class="content1">
     <p>International Bites</p>    
 </div>
-	
+
 <div class="content">
-  <ul>
-    <li><a id ="Selection">Go on a Cuisine Adventure</a>
-      <ul>
-        <li><a id ="india">India</a></li>
-        <li><a id ="china">China</a></li>
-        <li><a id ="France">France</a></li>
-        <li><a id ="spain">Spain</a></li>
-        <li><a id ="Germany">Germany</a></li>
+  <ul> 
+    <li> <a id ="Selection">Go on a Cuisine Adventure</a>
+      <ul> 
+        <li class="countries"><a data ="india">India</a></li>
+        <li class="countries"><a data ="china">China</a></li>
+        <li class="countries"><a data ="France">France</a></li>
+        <li>class="countries"<a data ="spain">Spain</a></li>
+        <li><a data ="Germany">Germany</a></li>
       </ul>
     </li>
   </ul>
 </div>
-<video height="400" width="900" autoplay="autoplay"  preload loop>
-  <source src="./Pexels.mp4" type="video/mp4" />
+<video height="400" width="900" autoplay="autoplay" loop >
+	<source src="./Cooking Vegetables.mp4" type="video/mp4" />
 </video>
-	<footer>
-		<div class ="content3">
-		<img src ="./cooking.png"
-			 class="medium" alt="cooking"/>
-		<img src ="./cooking2.png"
-			 class="medium" alt="cooking"/>
-		</div>
-	</footer>
+
+	
 </body>
 </html>
