fixed issues with links

--- a/Page3-1.html
+++ b/Page3-1.html
@@ -19,9 +19,12 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 	</div>
 	
 	
-<form>
-<div class = "buttoncontainer" align="center">
 
+<div class="buttoncontainer">
+
+	</div>	
+
+	<form>
 	<div class="form-group">
 	<label for="email info"><h1>Invite Your Friends!</h1></label>
 		<br>
@@ -31,9 +34,8 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 	<button id="event_button" class ="btn btn-light btn-lg">Sign Out</button>
 		
 	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-		
-</div>	
 	</form>
+\
 
 		
 			
