--- a/Main Page1.html
+++ b/Main Page1.html
@@ -33,6 +33,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
 	<source src="./Cooking Vegetables.mp4" type="video/mp4" />
 </video>
 
-	
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="jss.js"></script>
 </body>
 </html>
