--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="style.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'> 
+<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'> 
 
 </head>
 <body>
@@ -27,17 +27,9 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
     </li>
   </ul>
 </div>
-<video height="400" width="900" autoplay="autoplay"  preload loop>
-  <source src="./Pexels.mp4" type="video/mp4" />
+<video height="400" width="900" autoplay="autoplay" loop >
+	<source src="./Cooking Vegetables.mp4" type="video/mp4" />
 </video>
-	<footer>
-		<div class ="content3">
-		<img src ="./cooking.png"
-			 class="medium" alt="cooking"/>
-		<img src ="./cooking2.png"
-			 class="medium" alt="cooking"/>
-		</div>
-  </footer>
   
  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
  <script src="jss.js"></script>
