--- a/Page3-1.html
+++ b/Page3-1.html
@@ -36,14 +36,8 @@
 				<button id="signout_button" style="display: none;">Sign Out</button>
 				<button id="event_button" class="btn btn-light btn-lg">Sign Out</button>
 			</div>
-			<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+			<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 	</form>
-	\
-
-
-
-
-
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
 		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
