--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
   <ul>
     <li><a id ="Selection">Go on a Cuisine Adventure</a>
       <ul>
-        <li><a class="country" data="indian">India</a></li>
-        <li><a class="country" data="chinese">China</a></li>
-        <li><a class="country" data="french">France</a></li>
-        <li><a class="country" data="spanish">Spain</a></li>
-        <li><a class="country" data="german">Germany</a></li>
+        <li><a class="country" data="indian">Indian</a></li>
+        <li><a class="country" data="chinese">Chinese</a></li>
+        <li><a class="country" data="french">French</a></li>
+        <li><a class="country" data="spanish">Spanish</a></li>
+        <li><a class="country" data="german">German</a></li>
       </ul>
     </li>
   </ul>
