--- a/Page3-1.html
+++ b/Page3-1.html
@@ -24,26 +24,28 @@
 	<div class="buttoncontainer">
 
 	</div>
-
-	<form>
-		<div class="form-group">
-			<label for="email info">
-				<h1>Invite Your Friends!</h1>
-			</label>
-			<br>
-			<br>
-			<div class="sign">
+	<div class="footer">
+		<form>
+			<div class="form-group">
+				<label for="email info">
+					<h1>Invite Your Friends!</h1>
+				</label>
 				<br>
-				<button id="authorize_button" class="btn btn-light btn-lg">Sign In </button>
-				<button id="signout_button" style="display: none;">Sign Out</button>
-				<button id="event_button" class="btn btn-light btn-lg">Sign Out</button>
-			</div>
-			<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-	</form>
-
+				<br>
+				<div class="sign">
+					<br>
+					<button id="authorize_button" class="btn btn-light btn-lg">Sign In </button>
+					<button id="signout_button" style="display: none;">Sign Out</button>
+					<button id="event_button" class="btn btn-light btn-lg">Sign Out</button>
+				</div>
+				<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+		</form>
+	</div>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
 		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="jss.js"></script>
+
+
 
 
 </body>
