--- a/Page3-1.html
+++ b/Page3-1.html
@@ -1,50 +1,57 @@
 <!doctype html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Cook That Dish</title>
-<link href="style.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'> 
-	
+	<meta charset="UTF-8">
+	<title>Cook That Dish</title>
+	<link href="style.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+
 </head>
 
 <body>
-	
-	
-	
-	<div class ="page3bg">
-	<img src = "https://i.pinimg.com/originals/16/88/cc/1688cc152cf7a55cb6c070b0bad4ace9.jpg">
+
+
+
+	<div class="page3bg">
+		<img src="https://i.pinimg.com/originals/16/88/cc/1688cc152cf7a55cb6c070b0bad4ace9.jpg">
 	</div>
-	
-	
 
-<div class="buttoncontainer">
 
-	</div>	
+
+	<div class="buttoncontainer">
+
+	</div>
 
 	<form>
-	<div class="form-group">
-	<label for="email info"><h1>Invite Your Friends!</h1></label>
-		<br>
-	
-	<button id="authorize_button" class ="btn btn-light btn-lg">Sign In </button>
-	<button id="signout_button" style="display: none;">Sign Out</button>
-	<button id="event_button" class ="btn btn-light btn-lg">Sign Out</button>
-		
-	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+		<div class="form-group">
+			<label for="email info">
+				<h1>Invite Your Friends!</h1>
+			</label>
+			<br>
+			<br>
+			<div class="sign">
+				<br>
+				<button id="authorize_button" class="btn btn-light btn-lg">Sign In </button>
+				<button id="signout_button" style="display: none;">Sign Out</button>
+				<button id="event_button" class="btn btn-light btn-lg">Sign Out</button>
+			</div>
+			<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 	</form>
-\
 
-		
-			
-			
-			
-	
-	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
+
+
+
+
+
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="jss.js"></script>
-	
+
 
 </body>
+
 </html>
