--- a/Page3-1.html
+++ b/Page3-1.html
@@ -35,8 +35,8 @@
         <div class="sign">
           <br>
           <button id="authorize_button" class="btn btn-light btn-lg">Sign In </button>
-          <button id="signout_button" style="display: none;">Sign Out</button>
-          <button id="event_button" class="btn btn-light btn-lg">Sign Out</button>
+          <button id="signout_button" class="btn btn-light btn-lg" style="display: none;">Sign Out</button>
+          <button id="event_button" class="btn btn-light btn-lg">Event</button>
         </div>
         <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     </form>
